	- Fixed #876: Review - Installer - Wildcard should be allowed as part of SQL user hostname
	- Fixed #883: Defect - Web folders protection option must be automatically disabled and hidden when the immutable flag is not available
	- Fixed #886: Enhancement - Add SPF Resource Record Type in bind
	- Fixed #896: Bug - Variable {USERNAME} is not parsed in password email

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc3
------------------------------------------------------------------------------------------------------------------------

2013-07-23: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc3

CONFIGS:
	- Removed Amavis, ClamAV and SpamAssassin configuration (Such service must be provided as plugin)

ENGINE:
	- Added: Config_readonly option in bootstrap
	- Added: Cron job for deactivation of entities belonging to an expired account
	- Fixed: Allow to get raw db connection
	- Fixed: Access to i-MSCP server/addon parameters must be standardized
	- Fixed: unable to remove htgroup
	- Fixed: TERM environment variable not set (IMSCP::Debug library)
	- Removed: 'dnschange' status
	- Updated: 'change' status to 'tochange' and 'delete' status to 'todelete'

GUI:
	- Added: Plugin archive upload feature (tar.gz, tar.bz2 and zip)
	- Added: Protected Web folders option to hosting plans
	- Removed: 'dnschange' status
	- Updated: Plugin API (Several BC breaks expected)
	- Updated: status 'change' to 'tochange' and status 'delete' to 'todelete'

SETUP:
	- Changed: Items with status other than 'ok' and similar are not longer rebuilded on update

TOOLS:
	- Fixed: Awstats - Forbidden access (Ubuntu Lucid)

Tickets:
	- Fixed #782: Bug - Notice: A non well formed numeric value encountered...
	- Fixed #786: Bug - Httpd Server impl. - apache_php_fpm. - No input file specified
	- Fixed #790: Defect - Postfix 2.10.x - Relay access - SASL authentication